add SearchDocument
